--- a/index.html
+++ b/index.html
@@ -1,222 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>Space Empire – Galaxy Prototype</title>
 <style>
-  body {
-    margin: 0;
-    overflow: hidden;
-    background: black;
-    font-family: Arial, sans-serif;
-    color: white;
-  }
-  canvas {
-    display: block;
-  }
-  .hud {
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    font-size: 14px;
-    line-height: 1.4em;
-    user-select: none;
-  }
+body { margin:0; overflow:hidden; background:black; color:white; font-family:Arial }
+canvas { display:block }
+.hud {
+  position:fixed; top:10px; left:10px;
+  font-size:14px; line-height:1.4em;
+}
 </style>
 </head>
 <body>
 
 <div class="hud">
-  🌌 Galaxy View<br>
-  🟢 Green = Your Fleet<br>
-  ⚪ White = Stars<br>
-  Click = preview order<br>
-  Click again = confirm<br>
-  ESC = cancel preview<br>
-  Drag = Pan | Wheel = Zoom<br>
-  SPACE = Pause
+🌌 Galaxy View<br>
+🟢 Fleet<br>
+⚪ Stars<br>
+Click = preview<br>
+Click again = confirm<br>
+ESC = cancel preview<br>
+SPACE = Pause
 </div>
 
 <canvas id="game"></canvas>
 
 <script>
-/* =======================
-   CANVAS & CAMERA
-======================= */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-function resize() {
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-}
-window.addEventListener("resize", resize);
-resize();
+function resize(){canvas.width=innerWidth;canvas.height=innerHeight}
+addEventListener("resize",resize); resize();
 
-const camera = { x: 0, y: 0, zoom: 1 };
+/* CAMERA */
+const camera={x:0,y:0,zoom:1};
 
-/* =======================
-   SIMULATION STATE
-======================= */
-const Simulation = { paused: false };
+/* SIM */
+const Simulation={paused:false,lastTime:performance.now()};
 
-/* =======================
-   WORLD OBJECTS
-======================= */
-const stars = Array.from({ length: 60 }, () => ({
-  x: (Math.random() - 0.5) * 4000,
-  y: (Math.random() - 0.5) * 4000
+/* STARS */
+const stars=[...Array(60)].map(()=>({
+  x:(Math.random()-0.5)*4000,
+  y:(Math.random()-0.5)*4000
 }));
 
-const FleetState = {
-  IDLE: "IDLE",
-  MOVING: "MOVING",
-  ARRIVED: "ARRIVED"
+/* FLEET */
+const FleetState={IDLE:"IDLE",MOVING:"MOVING"};
+const fleet={
+  x:0,y:0,
+  speed:120, // units per second
+  target:null,
+  state:FleetState.IDLE,
+  eta:0
 };
 
-const fleet = {
-  x: 0,
-  y: 0,
-  speed: 2,
-  target: null,
-  state: FleetState.IDLE
-};
+/* COMMAND */
+let previewTarget=null;
 
-/* =======================
-   INPUT STATE
-======================= */
-let isDragging = false;
-let lastMouse = { x: 0, y: 0 };
-let previewTarget = null;
+/* INPUT */
+canvas.addEventListener("click",e=>{
+  if(Simulation.paused) return;
+  const w=screenToWorld(e.clientX,e.clientY);
 
-/* =======================
-   INPUT HANDLERS
-======================= */
-canvas.addEventListener("mousedown", e => {
-  isDragging = true;
-  lastMouse = { x: e.clientX, y: e.clientY };
-});
-
-canvas.addEventListener("mousemove", e => {
-  if (!isDragging) return;
-  camera.x -= (e.clientX - lastMouse.x) / camera.zoom;
-  camera.y -= (e.clientY - lastMouse.y) / camera.zoom;
-  lastMouse = { x: e.clientX, y: e.clientY };
-});
-
-canvas.addEventListener("mouseup", () => isDragging = false);
-
-canvas.addEventListener("wheel", e => {
-  camera.zoom = Math.min(3, Math.max(0.3, camera.zoom - e.deltaY * 0.001));
-});
-
-canvas.addEventListener("click", e => {
-  if (Simulation.paused) return;
-
-  const world = screenToWorld(e.clientX, e.clientY);
-
-  if (!previewTarget) {
-    previewTarget = world;
-  } else {
-    fleet.target = previewTarget;
-    fleet.state = FleetState.MOVING;
-    previewTarget = null;
-  }
-});
-
-window.addEventListener("keydown", e => {
-  if (e.code === "Escape") previewTarget = null;
-  if (e.code === "Space") Simulation.paused = !Simulation.paused;
-});
-
-/* =======================
-   COORDINATES
-======================= */
-function screenToWorld(x, y) {
-  return {
-    x: (x - canvas.width / 2) / camera.zoom + camera.x,
-    y: (y - canvas.height / 2) / camera.zoom + camera.y
-  };
-}
-
-/* =======================
-   UPDATE
-======================= */
-function updateFleet() {
-  if (Simulation.paused) return;
-  if (fleet.state !== FleetState.MOVING || !fleet.target) return;
-
-  const dx = fleet.target.x - fleet.x;
-  const dy = fleet.target.y - fleet.y;
-  const dist = Math.hypot(dx, dy);
-
-  if (dist <= fleet.speed) {
-    fleet.x = fleet.target.x;
-    fleet.y = fleet.target.y;
-    fleet.target = null;
-    fleet.state = FleetState.ARRIVED;
+  if(!previewTarget){
+    previewTarget=w;
     return;
   }
 
-  fleet.x += (dx / dist) * fleet.speed;
-  fleet.y += (dy / dist) * fleet.speed;
+  // CONFIRM
+  fleet.target=previewTarget;
+  const dx=fleet.target.x-fleet.x;
+  const dy=fleet.target.y-fleet.y;
+  const dist=Math.hypot(dx,dy);
+  fleet.eta=dist/fleet.speed;
+  fleet.state=FleetState.MOVING;
+  previewTarget=null;
+});
+
+addEventListener("keydown",e=>{
+  if(e.code==="Escape") previewTarget=null;
+  if(e.code==="Space") Simulation.paused=!Simulation.paused;
+});
+
+/* PAN & ZOOM */
+let drag=false,last={};
+canvas.onmousedown=e=>{drag=true;last={x:e.clientX,y:e.clientY}};
+canvas.onmouseup=()=>drag=false;
+canvas.onmousemove=e=>{
+  if(!drag) return;
+  camera.x-=(e.clientX-last.x)/camera.zoom;
+  camera.y-=(e.clientY-last.y)/camera.zoom;
+  last={x:e.clientX,y:e.clientY};
+};
+canvas.onwheel=e=>{
+  camera.zoom=Math.min(3,Math.max(0.3,camera.zoom-e.deltaY*0.001));
+};
+
+/* UTILS */
+function screenToWorld(x,y){
+  return{
+    x:(x-canvas.width/2)/camera.zoom+camera.x,
+    y:(y-canvas.height/2)/camera.zoom+camera.y
+  };
 }
 
-/* =======================
-   DRAW
-======================= */
-function draw() {
+/* UPDATE */
+function update(dt){
+  if(Simulation.paused) return;
+  if(fleet.state!==FleetState.MOVING||!fleet.target) return;
+
+  const dx=fleet.target.x-fleet.x;
+  const dy=fleet.target.y-fleet.y;
+  const dist=Math.hypot(dx,dy);
+
+  if(dist<fleet.speed*dt){
+    fleet.x=fleet.target.x;
+    fleet.y=fleet.target.y;
+    fleet.target=null;
+    fleet.state=FleetState.IDLE;
+    fleet.eta=0;
+    return;
+  }
+
+  fleet.x+=dx/dist*fleet.speed*dt;
+  fleet.y+=dy/dist*fleet.speed*dt;
+  fleet.eta=Math.max(0,fleet.eta-dt);
+}
+
+/* DRAW */
+function draw(){
   ctx.setTransform(1,0,0,1,0,0);
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  ctx.translate(canvas.width/2, canvas.height/2);
-  ctx.scale(camera.zoom, camera.zoom);
-  ctx.translate(-camera.x, -camera.y);
+  ctx.translate(canvas.width/2,canvas.height/2);
+  ctx.scale(camera.zoom,camera.zoom);
+  ctx.translate(-camera.x,-camera.y);
 
   // Stars
-  ctx.fillStyle = "white";
-  stars.forEach(s => {
+  ctx.fillStyle="white";
+  stars.forEach(s=>{
     ctx.beginPath();
-    ctx.arc(s.x, s.y, 4, 0, Math.PI*2);
+    ctx.arc(s.x,s.y,4,0,Math.PI*2);
     ctx.fill();
   });
 
   // Preview
-  if (previewTarget) {
+  if(previewTarget){
     ctx.setLineDash([10,6]);
-    ctx.strokeStyle = "red";
+    ctx.strokeStyle="red";
     ctx.beginPath();
-    ctx.moveTo(fleet.x, fleet.y);
-    ctx.lineTo(previewTarget.x, previewTarget.y);
+    ctx.moveTo(fleet.x,fleet.y);
+    ctx.lineTo(previewTarget.x,previewTarget.y);
     ctx.stroke();
     ctx.setLineDash([]);
-
-    ctx.fillStyle = "red";
+    ctx.fillStyle="red";
     ctx.beginPath();
-    ctx.arc(previewTarget.x, previewTarget.y, 6, 0, Math.PI*2);
+    ctx.arc(previewTarget.x,previewTarget.y,6,0,Math.PI*2);
     ctx.fill();
   }
 
   // Fleet
-  ctx.fillStyle = "lime";
+  ctx.fillStyle="lime";
   ctx.beginPath();
-  ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI*2);
+  ctx.arc(fleet.x,fleet.y,8,0,Math.PI*2);
   ctx.fill();
 
-  ctx.fillStyle = "lime";
-  ctx.fillText(`Your Fleet (${fleet.state})`, fleet.x + 12, fleet.y - 12);
+  ctx.fillStyle="lime";
+  const label=fleet.state==="MOVING"
+    ?`MOVING (${fleet.eta.toFixed(1)}s)`
+    :"IDLE";
+  ctx.fillText(label,fleet.x+12,fleet.y-12);
 }
 
-/* =======================
-   LOOP
-======================= */
-function loop() {
-  updateFleet();
-  if (fleet.state === FleetState.ARRIVED) fleet.state = FleetState.IDLE;
+/* LOOP */
+function loop(t){
+  const dt=(t-Simulation.lastTime)/1000;
+  Simulation.lastTime=t;
+  update(dt);
   draw();
   requestAnimationFrame(loop);
 }
-loop();
+requestAnimationFrame(loop);
 </script>
 
 </body>
