--- a/index.html
+++ b/index.html
@@ -1,249 +1,212 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Space Empire – Galaxy Prototype</title>
-<style>
-body {
-  margin: 0;
-  overflow: hidden;
-  background: black;
-  color: white;
-  font-family: Arial, sans-serif;
-}
-canvas { display: block; }
-.hud {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  font-size: 14px;
-  line-height: 1.4em;
-  user-select: none;
-}
-.status {
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
-  font-size: 14px;
-}
-</style>
+  <meta charset="UTF-8" />
+  <title>Galaxy View</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background: black;
+      color: white;
+      font-family: monospace;
+    }
+    canvas {
+      display: block;
+    }
+  </style>
 </head>
 <body>
-
-<div class="hud">
-🌌 Galaxy View<br>
-🟢 Fleet<br>
-⚪ Stars<br>
-Click = preview<br>
-Click again = confirm<br>
-ESC = cancel preview<br>
-SPACE = Pause
-</div>
-
-<div class="status" id="status"></div>
-
 <canvas id="game"></canvas>
 
 <script>
-/* =====================
-   SETUP
-===================== */
+/* =========================
+   CANVAS SETUP
+========================= */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
-const statusEl = document.getElementById("status");
 
 function resize() {
-  canvas.width = innerWidth;
-  canvas.height = innerHeight;
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 }
-addEventListener("resize", resize);
+window.addEventListener("resize", resize);
 resize();
 
-/* =====================
+/* =========================
    CAMERA
-===================== */
-const camera = { x: 0, y: 0, zoom: 1 };
-
-/* =====================
-   SIMULATION
-===================== */
-const Simulation = {
-  paused: false,
-  lastTime: performance.now()
+========================= */
+const camera = {
+  x: 0,
+  y: 0,
+  zoom: 1
 };
 
-/* =====================
-   WORLD
-===================== */
-const stars = Array.from({ length: 60 }, () => ({
-  x: (Math.random() - 0.5) * 4000,
-  y: (Math.random() - 0.5) * 4000
-}));
+/* =========================
+   SIMULATION STATE
+========================= */
+let paused = false;
 
-const FleetState = {
-  IDLE: "IDLE",
-  MOVING: "MOVING"
-};
-
+/* =========================
+   FLEET
+========================= */
 const fleet = {
   x: 0,
   y: 0,
   speed: 120,
   target: null,
-  state: FleetState.IDLE,
+  moving: false,
   eta: 0
 };
 
-let previewTarget = null;
-
-/* =====================
-   INPUT
-===================== */
-canvas.addEventListener("click", e => {
-  if (Simulation.paused) return;
-
-  const world = screenToWorld(e.clientX, e.clientY);
-
-  if (!previewTarget) {
-    previewTarget = world;
-    return;
-  }
-
-  // CONFIRM ORDER
-  fleet.target = previewTarget;
-  const dx = fleet.target.x - fleet.x;
-  const dy = fleet.target.y - fleet.y;
-  const dist = Math.hypot(dx, dy);
-
-  fleet.eta = dist / fleet.speed;
-  fleet.state = FleetState.MOVING;
-  previewTarget = null;
-});
-
-addEventListener("keydown", e => {
-  if (e.code === "Escape") previewTarget = null;
-  if (e.code === "Space") Simulation.paused = !Simulation.paused;
-});
-
-/* =====================
-   CAMERA CONTROL
-===================== */
-let dragging = false;
-let last = {};
-
-canvas.onmousedown = e => {
-  dragging = true;
-  last = { x: e.clientX, y: e.clientY };
-};
-canvas.onmouseup = () => dragging = false;
-canvas.onmousemove = e => {
-  if (!dragging) return;
-  camera.x -= (e.clientX - last.x) / camera.zoom;
-  camera.y -= (e.clientY - last.y) / camera.zoom;
-  last = { x: e.clientX, y: e.clientY };
-};
-canvas.onwheel = e => {
-  camera.zoom = Math.min(3, Math.max(0.3, camera.zoom - e.deltaY * 0.001));
-};
-
-/* =====================
-   COORDS
-===================== */
-function screenToWorld(x, y) {
-  return {
-    x: (x - canvas.width / 2) / camera.zoom + camera.x,
-    y: (y - canvas.height / 2) / camera.zoom + camera.y
-  };
+/* =========================
+   STARS
+========================= */
+const stars = [];
+for (let i = 0; i < 60; i++) {
+  stars.push({
+    x: (Math.random() - 0.5) * 4000,
+    y: (Math.random() - 0.5) * 4000
+  });
 }
 
-/* =====================
-   UPDATE
-===================== */
-function update(dt) {
-  if (Simulation.paused) return;
+/* =========================
+   INPUT
+========================= */
+let previewTarget = null;
 
-  if (fleet.state === FleetState.MOVING && fleet.target) {
+canvas.addEventListener("click", (e) => {
+  const rect = canvas.getBoundingClientRect();
+  const sx = e.clientX - rect.left;
+  const sy = e.clientY - rect.top;
+
+  const wx = (sx - canvas.width / 2) / camera.zoom + camera.x;
+  const wy = (sy - canvas.height / 2) / camera.zoom + camera.y;
+
+  if (!previewTarget) {
+    previewTarget = { x: wx, y: wy };
+  } else {
+    fleet.target = { x: previewTarget.x, y: previewTarget.y };
+    fleet.moving = true;
+
+    const dx = fleet.target.x - fleet.x;
+    const dy = fleet.target.y - fleet.y;
+    const dist = Math.hypot(dx, dy);
+    fleet.eta = dist / fleet.speed;
+
+    previewTarget = null;
+  }
+});
+
+window.addEventListener("keydown", (e) => {
+  if (e.code === "Escape") {
+    previewTarget = null;
+  }
+
+  if (e.code === "Space") {
+    paused = !paused;
+  }
+
+  /* =========================
+     STAGE 2.1 — CENTER ON FLEET
+  ========================= */
+  if (e.code === "KeyF") {
+    camera.x = fleet.x;
+    camera.y = fleet.y;
+  }
+});
+
+/* =========================
+   UPDATE
+========================= */
+let lastTime = performance.now();
+function update(time) {
+  const dt = (time - lastTime) / 1000;
+  lastTime = time;
+
+  if (!paused && fleet.moving && fleet.target) {
     const dx = fleet.target.x - fleet.x;
     const dy = fleet.target.y - fleet.y;
     const dist = Math.hypot(dx, dy);
 
-    if (dist <= fleet.speed * dt) {
+    if (dist < fleet.speed * dt) {
       fleet.x = fleet.target.x;
       fleet.y = fleet.target.y;
+      fleet.moving = false;
       fleet.target = null;
-      fleet.state = FleetState.IDLE;
       fleet.eta = 0;
-      return;
+    } else {
+      fleet.x += (dx / dist) * fleet.speed * dt;
+      fleet.y += (dy / dist) * fleet.speed * dt;
+      fleet.eta -= dt;
     }
-
-    fleet.x += (dx / dist) * fleet.speed * dt;
-    fleet.y += (dy / dist) * fleet.speed * dt;
-    fleet.eta = Math.max(0, fleet.eta - dt);
   }
 }
 
-/* =====================
+/* =========================
    DRAW
-===================== */
+========================= */
 function draw() {
-  ctx.setTransform(1,0,0,1,0,0);
-  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.setTransform(1, 0, 0, 1, 0, 0);
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-  ctx.translate(canvas.width/2, canvas.height/2);
+  ctx.translate(canvas.width / 2, canvas.height / 2);
   ctx.scale(camera.zoom, camera.zoom);
   ctx.translate(-camera.x, -camera.y);
 
-  // Stars
+  /* Stars */
   ctx.fillStyle = "white";
-  stars.forEach(s => {
+  for (const s of stars) {
     ctx.beginPath();
-    ctx.arc(s.x, s.y, 4, 0, Math.PI*2);
+    ctx.arc(s.x, s.y, 3, 0, Math.PI * 2);
     ctx.fill();
-  });
+  }
 
-  // Preview
+  /* Preview line */
   if (previewTarget) {
-    ctx.setLineDash([10,6]);
     ctx.strokeStyle = "red";
+    ctx.setLineDash([6, 6]);
     ctx.beginPath();
     ctx.moveTo(fleet.x, fleet.y);
     ctx.lineTo(previewTarget.x, previewTarget.y);
     ctx.stroke();
     ctx.setLineDash([]);
-    ctx.fillStyle = "red";
-    ctx.beginPath();
-    ctx.arc(previewTarget.x, previewTarget.y, 6, 0, Math.PI*2);
-    ctx.fill();
   }
 
-  // Fleet
+  /* Fleet */
   ctx.fillStyle = "lime";
   ctx.beginPath();
-  ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI*2);
+  ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI * 2);
   ctx.fill();
+
+  /* Fleet label */
+  ctx.fillStyle = "lime";
+  ctx.font = "14px monospace";
+  const label = fleet.moving
+    ? `MOVING (${fleet.eta.toFixed(1)}s)`
+    : "IDLE";
+  ctx.fillText(label, fleet.x + 12, fleet.y - 12);
+
+  /* UI */
+  ctx.setTransform(1, 0, 0, 1, 0, 0);
+  ctx.fillStyle = "white";
+  ctx.font = "14px monospace";
+  ctx.fillText("Galaxy View", 12, 20);
+  ctx.fillText("Click = preview / confirm", 12, 40);
+  ctx.fillText("ESC = cancel preview", 12, 60);
+  ctx.fillText("SPACE = pause", 12, 80);
+  ctx.fillText("F = center on fleet", 12, 100);
 }
 
-/* =====================
+/* =========================
    LOOP
-===================== */
-function loop(t) {
-  const dt = (t - Simulation.lastTime) / 1000;
-  Simulation.lastTime = t;
-
-  update(dt);
+========================= */
+function loop(time) {
+  update(time);
   draw();
-
-  // HUD STATUS (SCREEN SPACE)
-  if (fleet.state === FleetState.MOVING) {
-    statusEl.textContent = `Fleet: MOVING – ETA ${fleet.eta.toFixed(1)}s`;
-  } else {
-    statusEl.textContent = "Fleet: IDLE";
-  }
-
   requestAnimationFrame(loop);
 }
 requestAnimationFrame(loop);
 </script>
-
 </body>
 </html>
