--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Space Empire – Galaxy View</title>
+<meta charset="UTF-8" />
+<title>Space Empire – Galaxy View v2.1</title>
 <style>
 html, body {
   margin: 0;
@@ -13,209 +13,198 @@ html, body {
   color: white;
 }
 
-canvas {
-  display: block;
-}
-
-/* HUD */
-#hud {
+/* ===== CANVAS ===== */
+#game {
   position: absolute;
-  top: 10px;
-  left: 170px;
-  font-size: 14px;
-  line-height: 1.4;
-}
-
-/* Fleet panel */
-#fleetPanel {
-  position: absolute;
+  left: 240px; /* leave space for panel */
   top: 0;
+}
+
+/* ===== LEFT PANEL ===== */
+#fleetPanel {
+  position: fixed;
   left: 0;
-  width: 160px;
-  height: 100%;
-  background: rgba(20,20,20,0.9);
-  border-right: 1px solid #333;
+  top: 0;
+  width: 240px;
+  height: 100vh;
+  background: #0d0f12;
+  border-right: 1px solid #222;
   padding: 10px;
   box-sizing: border-box;
+  z-index: 10;
 }
 
-#fleetPanel h3 {
+#fleetPanel h2 {
   margin: 0 0 10px 0;
-  font-size: 14px;
-  text-align: center;
+  font-size: 16px;
 }
 
 .fleetItem {
-  border: 1px solid #333;
   padding: 8px;
-  margin-bottom: 8px;
+  border: 1px solid #1f1f1f;
+  margin-bottom: 6px;
   cursor: pointer;
-  background: #111;
 }
 
 .fleetItem:hover {
-  background: #1a1a1a;
+  background: #1b1f26;
 }
 
 .fleetName {
   color: #4cff4c;
-  font-weight: bold;
 }
 
 .fleetState {
   font-size: 12px;
-  opacity: 0.8;
+  color: #aaa;
+}
+
+/* ===== HUD ===== */
+#hud {
+  position: fixed;
+  left: 260px;
+  top: 10px;
+  font-size: 14px;
+  pointer-events: none;
 }
 </style>
 </head>
+
 <body>
 
+<!-- LEFT PANEL -->
 <div id="fleetPanel">
-  <h3>FLEETS</h3>
-  <div id="fleetList"></div>
+  <h2>FLEETS</h2>
+  <div class="fleetItem" id="fleetBtn">
+    <div class="fleetName">Fleet 1</div>
+    <div class="fleetState" id="fleetState">IDLE</div>
+  </div>
 </div>
 
+<!-- HUD -->
 <div id="hud">
-  <div>🌌 Galaxy View</div>
-  <div>🟢 Fleet</div>
-  <div>⚪ Stars</div>
-  <div>Click = preview</div>
-  <div>Click again = confirm</div>
-  <div>ESC = cancel preview</div>
-  <div>SPACE = Pause</div>
+  Galaxy View<br>
+  Click = preview / confirm<br>
+  ESC = cancel preview<br>
+  SPACE = pause<br>
+  Mouse Drag = Pan<br>
+  Mouse Wheel = Zoom
 </div>
 
 <canvas id="game"></canvas>
 
 <script>
+/* ===================== SETUP ===================== */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
 function resize() {
-  canvas.width = window.innerWidth;
+  canvas.width = window.innerWidth - 240;
   canvas.height = window.innerHeight;
 }
 window.addEventListener("resize", resize);
 resize();
 
-/* Camera */
-const camera = {
+/* ===================== CAMERA ===================== */
+let cam = { x: 0, y: 0, zoom: 1 };
+let dragging = false;
+let lastMouse = { x: 0, y: 0 };
+
+canvas.addEventListener("mousedown", e => {
+  dragging = true;
+  lastMouse = { x: e.clientX, y: e.clientY };
+});
+
+window.addEventListener("mouseup", () => dragging = false);
+
+window.addEventListener("mousemove", e => {
+  if (!dragging) return;
+  cam.x -= (e.clientX - lastMouse.x) / cam.zoom;
+  cam.y -= (e.clientY - lastMouse.y) / cam.zoom;
+  lastMouse = { x: e.clientX, y: e.clientY };
+});
+
+canvas.addEventListener("wheel", e => {
+  e.preventDefault();
+  cam.zoom *= e.deltaY < 0 ? 1.1 : 0.9;
+  cam.zoom = Math.max(0.2, Math.min(5, cam.zoom));
+}, { passive: false });
+
+/* ===================== WORLD ===================== */
+const stars = Array.from({ length: 40 }, () => ({
+  x: Math.random() * 3000 - 1500,
+  y: Math.random() * 3000 - 1500
+}));
+
+const fleet = {
   x: 0,
   y: 0,
-  zoom: 1
+  target: null,
+  speed: 2,
+  state: "IDLE",
+  eta: 0
 };
 
-/* Simulation */
+let preview = null;
 let paused = false;
 
-/* Stars */
-const stars = [];
-for (let i = 0; i < 40; i++) {
-  stars.push({
-    x: (Math.random() - 0.5) * 3000,
-    y: (Math.random() - 0.5) * 3000
-  });
-}
-
-/* Fleets (scalable) */
-const fleets = [
-  {
-    id: 1,
-    name: "Fleet 1",
-    x: 0,
-    y: 0,
-    target: null,
-    speed: 120,
-    state: "IDLE",
-    eta: 0
-  }
-];
-
-/* UI references */
-const fleetList = document.getElementById("fleetList");
-
-/* Build fleet panel */
-function renderFleetPanel() {
-  fleetList.innerHTML = "";
-  fleets.forEach(fleet => {
-    const div = document.createElement("div");
-    div.className = "fleetItem";
-    div.onclick = () => centerCameraOnFleet(fleet);
-
-    div.innerHTML = `
-      <div class="fleetName">${fleet.name}</div>
-      <div class="fleetState">${fleet.state}</div>
-    `;
-
-    fleetList.appendChild(div);
-  });
-}
-
-function centerCameraOnFleet(fleet) {
-  camera.x = fleet.x;
-  camera.y = fleet.y;
-}
-
-renderFleetPanel();
-
-/* Input */
-let previewTarget = null;
-
+/* ===================== INPUT ===================== */
 canvas.addEventListener("click", e => {
-  const rect = canvas.getBoundingClientRect();
-  const mx = (e.clientX - rect.left - canvas.width / 2) / camera.zoom + camera.x;
-  const my = (e.clientY - rect.top - canvas.height / 2) / camera.zoom + camera.y;
+  if (paused) return;
 
-  if (!previewTarget) {
-    previewTarget = { x: mx, y: my };
+  const rect = canvas.getBoundingClientRect();
+  const mx = (e.clientX - rect.left) / cam.zoom + cam.x;
+  const my = (e.clientY - rect.top) / cam.zoom + cam.y;
+
+  if (!preview) {
+    preview = { x: mx, y: my };
   } else {
-    const fleet = fleets[0];
-    fleet.target = { x: previewTarget.x, y: previewTarget.y };
+    fleet.target = preview;
     fleet.state = "MOVING";
-    previewTarget = null;
+    preview = null;
   }
 });
 
 window.addEventListener("keydown", e => {
-  if (e.code === "Escape") previewTarget = null;
-  if (e.code === "Space") paused = !paused;
+  if (e.key === "Escape") preview = null;
+  if (e.key === " ") paused = !paused;
 });
 
-/* Update */
-function update(dt) {
-  fleets.forEach(fleet => {
-    if (fleet.state === "MOVING" && fleet.target && !paused) {
-      const dx = fleet.target.x - fleet.x;
-      const dy = fleet.target.y - fleet.y;
-      const dist = Math.hypot(dx, dy);
+/* ===== PANEL BUTTON ===== */
+document.getElementById("fleetBtn").onclick = () => {
+  cam.x = fleet.x - canvas.width / (2 * cam.zoom);
+  cam.y = fleet.y - canvas.height / (2 * cam.zoom);
+};
 
-      fleet.eta = dist / fleet.speed;
+/* ===================== UPDATE ===================== */
+function update() {
+  if (!paused && fleet.target) {
+    const dx = fleet.target.x - fleet.x;
+    const dy = fleet.target.y - fleet.y;
+    const d = Math.hypot(dx, dy);
 
-      if (dist < 1) {
-        fleet.x = fleet.target.x;
-        fleet.y = fleet.target.y;
-        fleet.target = null;
-        fleet.state = "IDLE";
-      } else {
-        fleet.x += (dx / dist) * fleet.speed * dt;
-        fleet.y += (dy / dist) * fleet.speed * dt;
-      }
+    if (d < fleet.speed) {
+      fleet.x = fleet.target.x;
+      fleet.y = fleet.target.y;
+      fleet.target = null;
+      fleet.state = "IDLE";
+    } else {
+      fleet.x += (dx / d) * fleet.speed;
+      fleet.y += (dy / d) * fleet.speed;
+      fleet.state = "MOVING";
+      fleet.eta = (d / fleet.speed).toFixed(1);
     }
-  });
+  }
 
-  renderFleetPanel();
+  document.getElementById("fleetState").textContent =
+    fleet.state === "MOVING" ? `MOVING (${fleet.eta}s)` : "IDLE";
 }
 
-/* Draw */
+/* ===================== DRAW ===================== */
 function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  ctx.setTransform(cam.zoom, 0, 0, cam.zoom, -cam.x * cam.zoom, -cam.y * cam.zoom);
+  ctx.clearRect(cam.x, cam.y, canvas.width / cam.zoom, canvas.height / cam.zoom);
 
-  ctx.save();
-  ctx.translate(canvas.width / 2, canvas.height / 2);
-  ctx.scale(camera.zoom, camera.zoom);
-  ctx.translate(-camera.x, -camera.y);
-
-  /* Stars */
   ctx.fillStyle = "white";
   stars.forEach(s => {
     ctx.beginPath();
@@ -223,49 +212,29 @@ function draw() {
     ctx.fill();
   });
 
-  /* Preview */
-  if (previewTarget) {
-    const fleet = fleets[0];
+  if (preview) {
     ctx.strokeStyle = "red";
     ctx.setLineDash([5, 5]);
     ctx.beginPath();
     ctx.moveTo(fleet.x, fleet.y);
-    ctx.lineTo(previewTarget.x, previewTarget.y);
+    ctx.lineTo(preview.x, preview.y);
     ctx.stroke();
     ctx.setLineDash([]);
   }
 
-  /* Fleets */
-  fleets.forEach(fleet => {
-    ctx.fillStyle = "lime";
-    ctx.beginPath();
-    ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI * 2);
-    ctx.fill();
-
-    if (fleet.state === "MOVING") {
-      ctx.fillStyle = "lime";
-      ctx.font = "12px Arial";
-      ctx.fillText(
-        `MOVING (${fleet.eta.toFixed(1)}s)`,
-        fleet.x + 10,
-        fleet.y - 10
-      );
-    }
-  });
-
-  ctx.restore();
+  ctx.fillStyle = "lime";
+  ctx.beginPath();
+  ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI * 2);
+  ctx.fill();
 }
 
-/* Loop */
-let last = performance.now();
-function loop(now) {
-  const dt = (now - last) / 1000;
-  last = now;
-  update(dt);
+/* ===================== LOOP ===================== */
+function loop() {
+  update();
   draw();
   requestAnimationFrame(loop);
 }
-loop(last);
+loop();
 </script>
 
 </body>
