--- a/index.html
+++ b/index.html
@@ -1,241 +1,168 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<title>Space Empire – Galaxy View v2.1</title>
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background: black;
-  font-family: Arial, sans-serif;
-  color: white;
-}
-
-/* ===== CANVAS ===== */
-#game {
-  position: absolute;
-  left: 240px; /* leave space for panel */
-  top: 0;
-}
-
-/* ===== LEFT PANEL ===== */
-#fleetPanel {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 240px;
-  height: 100vh;
-  background: #0d0f12;
-  border-right: 1px solid #222;
-  padding: 10px;
-  box-sizing: border-box;
-  z-index: 10;
-}
-
-#fleetPanel h2 {
-  margin: 0 0 10px 0;
-  font-size: 16px;
-}
-
-.fleetItem {
-  padding: 8px;
-  border: 1px solid #1f1f1f;
-  margin-bottom: 6px;
-  cursor: pointer;
-}
-
-.fleetItem:hover {
-  background: #1b1f26;
-}
-
-.fleetName {
-  color: #4cff4c;
-}
-
-.fleetState {
-  font-size: 12px;
-  color: #aaa;
-}
-
-/* ===== HUD ===== */
-#hud {
-  position: fixed;
-  left: 260px;
-  top: 10px;
-  font-size: 14px;
-  pointer-events: none;
-}
-</style>
-</head>
-
-<body>
-
-<!-- LEFT PANEL -->
-<div id="fleetPanel">
-  <h2>FLEETS</h2>
-  <div class="fleetItem" id="fleetBtn">
-    <div class="fleetName">Fleet 1</div>
-    <div class="fleetState" id="fleetState">IDLE</div>
-  </div>
-</div>
-
-<!-- HUD -->
-<div id="hud">
-  Galaxy View<br>
-  Click = preview / confirm<br>
-  ESC = cancel preview<br>
-  SPACE = pause<br>
-  Mouse Drag = Pan<br>
-  Mouse Wheel = Zoom
-</div>
-
-<canvas id="game"></canvas>
-
 <script>
-/* ===================== SETUP ===================== */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
 function resize() {
-  canvas.width = window.innerWidth - 240;
+  canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
 }
 window.addEventListener("resize", resize);
 resize();
 
-/* ===================== CAMERA ===================== */
-let cam = { x: 0, y: 0, zoom: 1 };
+/* ================= CAMERA ================= */
+const camera = {
+  x: 0,
+  y: 0,
+  zoom: 1
+};
+
+/* ================= STATE ================= */
+let paused = false;
 let dragging = false;
 let lastMouse = { x: 0, y: 0 };
 
-canvas.addEventListener("mousedown", e => {
-  dragging = true;
-  lastMouse = { x: e.clientX, y: e.clientY };
-});
-
-window.addEventListener("mouseup", () => dragging = false);
-
-window.addEventListener("mousemove", e => {
-  if (!dragging) return;
-  cam.x -= (e.clientX - lastMouse.x) / cam.zoom;
-  cam.y -= (e.clientY - lastMouse.y) / cam.zoom;
-  lastMouse = { x: e.clientX, y: e.clientY };
-});
-
-canvas.addEventListener("wheel", e => {
-  e.preventDefault();
-  cam.zoom *= e.deltaY < 0 ? 1.1 : 0.9;
-  cam.zoom = Math.max(0.2, Math.min(5, cam.zoom));
-}, { passive: false });
-
-/* ===================== WORLD ===================== */
-const stars = Array.from({ length: 40 }, () => ({
-  x: Math.random() * 3000 - 1500,
-  y: Math.random() * 3000 - 1500
-}));
-
+/* ================= FLEET ================= */
 const fleet = {
   x: 0,
   y: 0,
-  target: null,
-  speed: 2,
+  tx: null,
+  ty: null,
+  speed: 80,
   state: "IDLE",
   eta: 0
 };
 
-let preview = null;
-let paused = false;
+/* ================= STARS ================= */
+const stars = [];
+for (let i = 0; i < 100; i++) {
+  stars.push({
+    x: (Math.random() - 0.5) * 4000,
+    y: (Math.random() - 0.5) * 4000
+  });
+}
 
-/* ===================== INPUT ===================== */
+/* ================= HELPERS ================= */
+function screenToWorld(x, y) {
+  return {
+    x: (x - canvas.width / 2) / camera.zoom + camera.x,
+    y: (y - canvas.height / 2) / camera.zoom + camera.y
+  };
+}
+
+/* ================= INPUT ================= */
+canvas.addEventListener("mousedown", e => {
+  dragging = true;
+  lastMouse.x = e.clientX;
+  lastMouse.y = e.clientY;
+});
+
+window.addEventListener("mouseup", () => dragging = false);
+
+canvas.addEventListener("mousemove", e => {
+  if (!dragging) return;
+  const dx = (e.clientX - lastMouse.x) / camera.zoom;
+  const dy = (e.clientY - lastMouse.y) / camera.zoom;
+  camera.x -= dx;
+  camera.y -= dy;
+  lastMouse.x = e.clientX;
+  lastMouse.y = e.clientY;
+});
+
+/* ================= ZOOM (FIXED) ================= */
+canvas.addEventListener("wheel", e => {
+  e.preventDefault();
+
+  const mouseWorldBefore = screenToWorld(e.clientX, e.clientY);
+
+  const zoomFactor = Math.exp(-e.deltaY * 0.001);
+  camera.zoom = Math.min(5, Math.max(0.2, camera.zoom * zoomFactor));
+
+  const mouseWorldAfter = screenToWorld(e.clientX, e.clientY);
+
+  camera.x += mouseWorldBefore.x - mouseWorldAfter.x;
+  camera.y += mouseWorldBefore.y - mouseWorldAfter.y;
+}, { passive: false });
+
+/* ================= CLICK MOVE ================= */
 canvas.addEventListener("click", e => {
+  const w = screenToWorld(e.clientX, e.clientY);
+  fleet.tx = w.x;
+  fleet.ty = w.y;
+  fleet.state = "MOVING";
+});
+
+/* ================= KEYBOARD ================= */
+window.addEventListener("keydown", e => {
+  if (e.code === "Space") paused = !paused;
+});
+
+/* ================= UPDATE ================= */
+function update(dt) {
   if (paused) return;
 
-  const rect = canvas.getBoundingClientRect();
-  const mx = (e.clientX - rect.left) / cam.zoom + cam.x;
-  const my = (e.clientY - rect.top) / cam.zoom + cam.y;
-
-  if (!preview) {
-    preview = { x: mx, y: my };
-  } else {
-    fleet.target = preview;
-    fleet.state = "MOVING";
-    preview = null;
-  }
-});
-
-window.addEventListener("keydown", e => {
-  if (e.key === "Escape") preview = null;
-  if (e.key === " ") paused = !paused;
-});
-
-/* ===== PANEL BUTTON ===== */
-document.getElementById("fleetBtn").onclick = () => {
-  cam.x = fleet.x - canvas.width / (2 * cam.zoom);
-  cam.y = fleet.y - canvas.height / (2 * cam.zoom);
-};
-
-/* ===================== UPDATE ===================== */
-function update() {
-  if (!paused && fleet.target) {
-    const dx = fleet.target.x - fleet.x;
-    const dy = fleet.target.y - fleet.y;
+  if (fleet.state === "MOVING") {
+    const dx = fleet.tx - fleet.x;
+    const dy = fleet.ty - fleet.y;
     const d = Math.hypot(dx, dy);
 
-    if (d < fleet.speed) {
-      fleet.x = fleet.target.x;
-      fleet.y = fleet.target.y;
-      fleet.target = null;
+    if (d < 1) {
+      fleet.x = fleet.tx;
+      fleet.y = fleet.ty;
       fleet.state = "IDLE";
     } else {
-      fleet.x += (dx / d) * fleet.speed;
-      fleet.y += (dy / d) * fleet.speed;
-      fleet.state = "MOVING";
+      const step = fleet.speed * dt;
+      fleet.x += dx / d * step;
+      fleet.y += dy / d * step;
       fleet.eta = (d / fleet.speed).toFixed(1);
     }
   }
-
-  document.getElementById("fleetState").textContent =
-    fleet.state === "MOVING" ? `MOVING (${fleet.eta}s)` : "IDLE";
 }
 
-/* ===================== DRAW ===================== */
+/* ================= DRAW ================= */
 function draw() {
-  ctx.setTransform(cam.zoom, 0, 0, cam.zoom, -cam.x * cam.zoom, -cam.y * cam.zoom);
-  ctx.clearRect(cam.x, cam.y, canvas.width / cam.zoom, canvas.height / cam.zoom);
+  ctx.setTransform(
+    camera.zoom, 0, 0, camera.zoom,
+    canvas.width / 2 - camera.x * camera.zoom,
+    canvas.height / 2 - camera.y * camera.zoom
+  );
 
+  ctx.fillStyle = "black";
+  ctx.fillRect(camera.x - 5000, camera.y - 5000, 10000, 10000);
+
+  // stars
   ctx.fillStyle = "white";
   stars.forEach(s => {
     ctx.beginPath();
-    ctx.arc(s.x, s.y, 3, 0, Math.PI * 2);
+    ctx.arc(s.x, s.y, 2 / camera.zoom, 0, Math.PI * 2);
     ctx.fill();
   });
 
-  if (preview) {
-    ctx.strokeStyle = "red";
-    ctx.setLineDash([5, 5]);
-    ctx.beginPath();
-    ctx.moveTo(fleet.x, fleet.y);
-    ctx.lineTo(preview.x, preview.y);
-    ctx.stroke();
-    ctx.setLineDash([]);
-  }
-
+  // fleet
   ctx.fillStyle = "lime";
   ctx.beginPath();
-  ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI * 2);
+  ctx.arc(fleet.x, fleet.y, 6 / camera.zoom, 0, Math.PI * 2);
   ctx.fill();
+
+  ctx.resetTransform();
+
+  // HUD label
+  if (fleet.state === "MOVING") {
+    ctx.fillStyle = "lime";
+    ctx.fillText(`MOVING (${fleet.eta}s)`,
+      canvas.width / 2 + (fleet.x - camera.x) * camera.zoom + 8,
+      canvas.height / 2 + (fleet.y - camera.y) * camera.zoom - 8
+    );
+  }
 }
 
-/* ===================== LOOP ===================== */
-function loop() {
-  update();
+/* ================= LOOP ================= */
+let last = performance.now();
+function loop(t) {
+  const dt = (t - last) / 1000;
+  last = t;
+  update(dt);
   draw();
   requestAnimationFrame(loop);
 }
-loop();
+loop(last);
 </script>
-
-</body>
-</html>
